회사소개 - 상단 텍스트, 연혁, 인증서 이미지 수정

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -59,7 +59,7 @@
                 <img src="images/logo02.png" alt="LNC (주)엘앤씨 에프앤비">
                 <p>
                     LNC FNB는 축산물 가공납품 전문 기업으로 현재 서울시, 경기도, 인천시 소재 초,중,고등학교<br class="pc">
-                    집단 급식실 (150개소 이상)에 축산물 가공 납품 중이며 그 외 다수의 프랜차이즈 및<br class="pc">
+                    <b>집단 급식실 (350개소 이상)</b>에 축산물 가공 및 식품 납품 중이며 그 외 다수의 프랜차이즈 및<br class="pc">
                     로드샵 소매점 축산물 가공 납품 및 해병대, 해군 등 군납 가공 납품영역을 담당하고 있습니다.
                 </p>
             </div>
@@ -77,7 +77,7 @@
                     <li>
                         <span>2016</span>
                         <div>
-                            <p>한라유통(용인시) 물류창고 설립</p>
+                            <p>한라유통(용인시)<br> 물류창고 설립</p>
                         </div>
                     </li>
                     <li>
@@ -121,11 +121,11 @@
                     <li>
                         <span>2021</span>
                         <div>
-                            <p>식육포장처리업 허가 및 
+                            <p>식육포장처리업 허가 및<br>
                                 HACCP인증 취득</p>
                             <p>
                                 김포시 소재 제2 물류창고 설립<br>
-                                (경기도 김포시 하성면 대지1000평 규모)
+                                (경기도 김포시 하성면<br> 대지1000평 규모)
                             </p>
                         </div>
                     </li>
@@ -139,6 +139,20 @@
                             </p>
                         </div>
                     </li>
+                    <li>
+                        <span>2023</span>
+                        <div>
+                            <p>축산물가공업 (식육가공업)허가</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2024</span>
+                        <div>
+                            <p>김포 제2작업장
+                                (280평) 증축
+                            </p>
+                        </div>
+                    </li>
                 </ol>
             </section>
 
@@ -149,13 +163,16 @@
                     <b>HACCP 인증</b>으로 품질관리에 최선을 다하고 있습니다.
                 </p>
                 <ul data-styleIdx>
-                    <li class="imgBox">장애인 표준사업장 인증서</li>
-                    <li class="imgBox">신고필증</li>
-                    <li class="imgBox">신고필증</li>
-                    <li class="imgBox">허가증</li>
-                    <li class="imgBox">안전관리인증(작업장, 업소, 농장) (HACCP) 인증서</li>
-                    <li class="imgBox">영업신고증</li>
-                    <li class="imgBox">영업등록증</li>
+                    <li>장애인 표준사업장 인증서</li>
+                    <li>허가증</li>
+                    <li>신고필증</li>
+                    <li>신고필증</li>
+                    <li>영업신고증</li>
+                    <li>허가증</li>
+                    <li>공장등록증명(신청)서</li>
+                    <li>안전관리인증(작업장, 업소, 농장) (HACCP) 인증서</li>
+                    <li>사업자등록증</li>
+                    <li>생산물배상책임보험</li>
                 </ul>
                 <a href="employ-policy.html">연계고용 부담금 감면 자세히보기</a>
             </section>
