--- a/aboutUs.html
+++ b/aboutUs.html
@@ -187,15 +187,15 @@
                     </li>
                     <li>
                         <b>대표 전화</b>
-                        <p>031-998-3902</p>
+                        <p><a href="tel:0319983902">031-998-3902</a></p>
                     </li>
                     <li>
                         <b>팩스</b>
-                        <p>031-998-3903</p>
+                        <p><a href="tel:0319983903">031-998-3903</a></p>
                     </li>
                     <li>
                         <b>대표 이메일</b>
-                        <p>9056599@naver.com</p>
+                        <p><a href="mailto:9056599@naver.com">9056599@naver.com</a></p>
                     </li>
                 </ul>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3157.019081477059!2d126.64155507632772!3d37.69575091670754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c87b7ce82fae3%3A0x154a0242d5aa7b11!2z6rK96riw64-EIOq5gO2PrOyLnCDtlZjshLHrqbQg7ZWY7IKs66GcIDky!5e0!3m2!1sko!2skr!4v1711011711917!5m2!1sko!2skr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
